tests/should_fail/enum_redeclared.nv
module main

// SHOULD FAIL: enum variant called with wrong argument type
// Color::Red expects None (unit variant) — passing an Int should fail
enum Color {
    Red,
    Green,
    Blue
}

// Red is a unit variant; calling it with an Int arg should fail
let c = Color::Red(42)
println(c)
